--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 spring.application.name=Project
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url= jdbc:mysql://localhost:3306/planifydb?useSSL=false&serverTimezone=UTC
+
+spring.datasource.url=jdbc:mysql://localhost:3306/planifydb?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=root
+
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
